kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pesto-ecommerce-service
spec:
  selector:
    app: pesto-ecommerce-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
