kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pesto-ecommerce-product-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: pesto-ecommerce-product-service
            port:
              number: 8080
